[package]
name = "organelle"
version = "0.1.2"
authors = ["Andrew J Westlake <kelixes@gmail.com>"]
description = "framework for creating emergent AI systems"
license = "MIT"
license-file = "LICENSE.md"
documentation = "https://docs.rs/organelle"
homepage = "https://github.com/awestlake87/organelle"
repository = "https://github.com/awestlake87/organelle"

[dependencies]
error-chain = "0.11"
futures = "0.1"
tokio = "0.0"
tokio-core = "0.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
