[package]
name = "organelle"
version = "0.7.4"
authors = ["Andrew J Westlake <kelixes@gmail.com>"]
description = "framework for creating emergent AI systems"
license = "MIT"
documentation = "https://docs.rs/organelle"
homepage = "https://github.com/awestlake87/organelle"
repository = "https://github.com/awestlake87/organelle"

[features]
visualizer = ["hyper", "open"]

[workspace]
members = []

[dependencies]
bytes = "0.4"
error-chain = "0.11"
futures-await = "0.1"
tokio = "0.0"
tokio-core = "0.1"
uuid = { version = "0.6", features = ["serde", "v4"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

hyper = { version = "0.11", optional = true }
open = { version = "1.2", optional = true }

[dev-dependencies]
tokio-timer = "0.1"

[[example]]
name = "visualizer"
crate-type = ["bin"]
path = "examples/visualizer.rs"
required-features = ["visualizer"]
